--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,9 @@ RUN mkdir /project
 WORKDIR /project
 
 COPY . .
+RUN npm config set strict-ssl false
 RUN npm install global  @vue/cli
+RUN npm config set registry https://registry.npmmirror.com
 RUN yarn install
 ENV HOST=0.0.0.0
 CMD ["npm", "run", "serve"]
